lib/nusantara_antlr4/NusantaraLanguageParser.dart
// Generated from C:/Aerell/AerellDev/Programing Language Project/Nusantara-Language/grammar/NusantaraLanguageParser.g4 by ANTLR 4.13.1
// ignore_for_file: unused_import, unused_local_variable, prefer_single_quotes
import 'package:antlr4/antlr4.dart';

import 'NusantaraLanguageParserListener.dart';
import 'NusantaraLanguageParserBaseListener.dart';
import 'NusantaraLanguageParserVisitor.dart';
import 'NusantaraLanguageParserBaseVisitor.dart';
const int RULE_nusantara = 0, RULE_pernyataan = 1, RULE_muat_file = 2, RULE_blok_kode = 3, 
          RULE_parameter_fungsi_kosong = 4, RULE_parameter_buat_fungsi = 5, 
          RULE_buat_fungsi = 6, RULE_parameter_panggil_fungsi = 7, RULE_panggil_fungsi = 8, 
          RULE_tipe_data_variable = 9, RULE_buat_variable = 10, RULE_nilai_variable = 11, 
          RULE_ngisi_variable = 12, RULE_buat_dan_ngisi_variable = 13;
class NusantaraLanguageParser extends Parser {
  static final checkVersion = () => RuntimeMetaData.checkVersion('4.13.1', RuntimeMetaData.VERSION);
  static const int TOKEN_EOF = IntStream.EOF;

  static final List<DFA> _decisionToDFA = List.generate(
      _ATN.numberOfDecisions, (i) => DFA(_ATN.getDecisionState(i), i));
  static final PredictionContextCache _sharedContextCache = PredictionContextCache();
  static const int TOKEN_MUAT = 1, TOKEN_TIPE_DATA_BILANGAN_BULAT = 2, TOKEN_TIPE_DATA_BILANGAN_DESIMAL = 3, 
                   TOKEN_TIPE_DATA_KARAKTER = 4, TOKEN_TIPE_DATA_KALIMAT = 5, 
                   TOKEN_TIPE_DATA_BOOLEAN = 6, TOKEN_NILAI_BILANGAN_BULAT = 7, 
                   TOKEN_NILAI_BILANGAN_DESIMAL = 8, TOKEN_NILAI_KARAKTER = 9, 
                   TOKEN_NILAI_KALIMAT = 10, TOKEN_NILAI_BOOLEAN = 11, TOKEN_TAMBAH = 12, 
                   TOKEN_KURANG = 13, TOKEN_KALI = 14, TOKEN_BAGI = 15, 
                   TOKEN_SISA_BAGI = 16, TOKEN_KUTIP_SATU = 17, TOKEN_KUTIP_DUA = 18, 
                   TOKEN_IDENTIFIKASI = 19, TOKEN_SAMA_DENGAN = 20, TOKEN_TITIK_KOMA = 21, 
                   TOKEN_KURUNG_BUKA = 22, TOKEN_KURUNG_TUTUP = 23, TOKEN_KURUNG_KURAWAL_BUKA = 24, 
                   TOKEN_KURUNG_KURAWAL_TUTUP = 25, TOKEN_KURUNG_SIKU_BUKA = 26, 
                   TOKEN_KURUNG_SIKU_TUTUP = 27, TOKEN_KURANG_DARI = 28, 
                   TOKEN_LEBIH_BESAR_DARI = 29, TOKEN_KURANG_DARI_SAMA_DENGAN = 30, 
                   TOKEN_LEBIH_BESAR_DARI_SAMA_DENGAN = 31, TOKEN_TANDA_TANYA = 32, 
                   TOKEN_TANDA_SERU = 33, TOKEN_KOMA = 34, TOKEN_TITIK = 35, 
                   TOKEN_DOLAR = 36, TOKEN_KOMENTAR_SATU_BARIS = 37, TOKEN_KOMENTAR_BANYAK_BARIS = 38, 
                   TOKEN_WHITESPACE = 39;

  @override
  final List<String> ruleNames = [
    'nusantara', 'pernyataan', 'muat_file', 'blok_kode', 'parameter_fungsi_kosong', 
    'parameter_buat_fungsi', 'buat_fungsi', 'parameter_panggil_fungsi', 
    'panggil_fungsi', 'tipe_data_variable', 'buat_variable', 'nilai_variable', 
    'ngisi_variable', 'buat_dan_ngisi_variable'
  ];

  static final List<String?> _LITERAL_NAMES = [
      null, "'muat'", "'bilangan bulat'", "'bilangan desimal'", "'karakter'", 
      "'kalimat'", "'bool'", null, null, null, null, null, "'+'", "'-'", 
      "'*'", "'/'", "'%'", "'''", "'\"'", null, "'='", "';'", "'('", "')'", 
      "'{'", "'}'", "'['", "']'", "'<'", "'>'", "'<='", "'>='", "'?'", "'!'", 
      "','", "'.'", "'\$'"
  ];
  static final List<String?> _SYMBOLIC_NAMES = [
      null, "MUAT", "TIPE_DATA_BILANGAN_BULAT", "TIPE_DATA_BILANGAN_DESIMAL", 
      "TIPE_DATA_KARAKTER", "TIPE_DATA_KALIMAT", "TIPE_DATA_BOOLEAN", "NILAI_BILANGAN_BULAT", 
      "NILAI_BILANGAN_DESIMAL", "NILAI_KARAKTER", "NILAI_KALIMAT", "NILAI_BOOLEAN", 
      "TAMBAH", "KURANG", "KALI", "BAGI", "SISA_BAGI", "KUTIP_SATU", "KUTIP_DUA", 
      "IDENTIFIKASI", "SAMA_DENGAN", "TITIK_KOMA", "KURUNG_BUKA", "KURUNG_TUTUP", 
      "KURUNG_KURAWAL_BUKA", "KURUNG_KURAWAL_TUTUP", "KURUNG_SIKU_BUKA", 
      "KURUNG_SIKU_TUTUP", "KURANG_DARI", "LEBIH_BESAR_DARI", "KURANG_DARI_SAMA_DENGAN", 
      "LEBIH_BESAR_DARI_SAMA_DENGAN", "TANDA_TANYA", "TANDA_SERU", "KOMA", 
      "TITIK", "DOLAR", "KOMENTAR_SATU_BARIS", "KOMENTAR_BANYAK_BARIS", 
      "WHITESPACE"
  ];
  static final Vocabulary VOCABULARY = VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

  @override
  Vocabulary get vocabulary {
    return VOCABULARY;
  }

  @override
  String get grammarFileName => 'NusantaraLanguageParser.g4';

  @override
  List<int> get serializedATN => _serializedATN;

  @override
  ATN getATN() {
   return _ATN;
  }

  NusantaraLanguageParser(TokenStream input) : super(input) {
    interpreter = ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
  }

  NusantaraContext nusantara() {
    dynamic _localctx = NusantaraContext(context, state);
    enterRule(_localctx, 0, RULE_nusantara);
    int _la;
    try {
      state = 35;
      errorHandler.sync(this);
      switch (interpreter!.adaptivePredict(tokenStream, 1, context)) {
      case 1:
        enterOuterAlt(_localctx, 1);
        state = 31;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        while ((((_la) & ~0x3f) == 0 && ((1 << _la) & 17301630) != 0)) {
          state = 28;
          pernyataan();
          state = 33;
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
        }
        break;
      case 2:
        enterOuterAlt(_localctx, 2);
        state = 34;
        match(TOKEN_EOF);
        break;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  PernyataanContext pernyataan() {
    dynamic _localctx = PernyataanContext(context, state);
    enterRule(_localctx, 2, RULE_pernyataan);
    try {
      state = 54;
      errorHandler.sync(this);
      switch (interpreter!.adaptivePredict(tokenStream, 2, context)) {
      case 1:
        enterOuterAlt(_localctx, 1);
        state = 37;
        blok_kode();
        break;
      case 2:
        enterOuterAlt(_localctx, 2);
        state = 38;
        buat_fungsi();
        break;
      case 3:
        enterOuterAlt(_localctx, 3);
        state = 39;
        muat_file();
        state = 40;
        match(TOKEN_TITIK_KOMA);
        break;
      case 4:
        enterOuterAlt(_localctx, 4);
        state = 42;
        panggil_fungsi();
        state = 43;
        match(TOKEN_TITIK_KOMA);
        break;
      case 5:
        enterOuterAlt(_localctx, 5);
        state = 45;
        buat_variable();
        state = 46;
        match(TOKEN_TITIK_KOMA);
        break;
      case 6:
        enterOuterAlt(_localctx, 6);
        state = 48;
        ngisi_variable();
        state = 49;
        match(TOKEN_TITIK_KOMA);
        break;
      case 7:
        enterOuterAlt(_localctx, 7);
        state = 51;
        buat_dan_ngisi_variable();
        state = 52;
        match(TOKEN_TITIK_KOMA);
        break;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  Muat_fileContext muat_file() {
    dynamic _localctx = Muat_fileContext(context, state);
    enterRule(_localctx, 4, RULE_muat_file);
    try {
      enterOuterAlt(_localctx, 1);
      state = 56;
      match(TOKEN_MUAT);
      state = 57;
      match(TOKEN_NILAI_KALIMAT);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  Blok_kodeContext blok_kode() {
    dynamic _localctx = Blok_kodeContext(context, state);
    enterRule(_localctx, 6, RULE_blok_kode);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 59;
      match(TOKEN_KURUNG_KURAWAL_BUKA);
      state = 63;
      errorHandler.sync(this);
      _la = tokenStream.LA(1)!;
      while ((((_la) & ~0x3f) == 0 && ((1 << _la) & 17301630) != 0)) {
        state = 60;
        pernyataan();
        state = 65;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
      }
      state = 66;
      match(TOKEN_KURUNG_KURAWAL_TUTUP);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  Parameter_fungsi_kosongContext parameter_fungsi_kosong() {
    dynamic _localctx = Parameter_fungsi_kosongContext(context, state);
    enterRule(_localctx, 8, RULE_parameter_fungsi_kosong);
    try {
      enterOuterAlt(_localctx, 1);
      state = 68;
      match(TOKEN_KURUNG_BUKA);
      state = 69;
      match(TOKEN_KURUNG_TUTUP);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  Parameter_buat_fungsiContext parameter_buat_fungsi() {
    dynamic _localctx = Parameter_buat_fungsiContext(context, state);
    enterRule(_localctx, 10, RULE_parameter_buat_fungsi);
    int _la;
    try {
      state = 89;
      errorHandler.sync(this);
      switch (interpreter!.adaptivePredict(tokenStream, 8, context)) {
      case 1:
        enterOuterAlt(_localctx, 1);
        state = 71;
        parameter_fungsi_kosong();
        break;
      case 2:
        enterOuterAlt(_localctx, 2);
        state = 72;
        match(TOKEN_KURUNG_BUKA);
        state = 75;
        errorHandler.sync(this);
        switch (interpreter!.adaptivePredict(tokenStream, 4, context)) {
        case 1:
          state = 73;
          buat_variable();
          break;
        case 2:
          state = 74;
          buat_dan_ngisi_variable();
          break;
        }
        state = 85;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        if (_la == TOKEN_KOMA) {
          state = 77;
          match(TOKEN_KOMA);
          state = 82;
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
          while ((((_la) & ~0x3f) == 0 && ((1 << _la) & 124) != 0)) {
            state = 80;
            errorHandler.sync(this);
            switch (interpreter!.adaptivePredict(tokenStream, 5, context)) {
            case 1:
              state = 78;
              buat_variable();
              break;
            case 2:
              state = 79;
              buat_dan_ngisi_variable();
              break;
            }
            state = 84;
            errorHandler.sync(this);
            _la = tokenStream.LA(1)!;
          }
        }

        state = 87;
        match(TOKEN_KURUNG_TUTUP);
        break;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  Buat_fungsiContext buat_fungsi() {
    dynamic _localctx = Buat_fungsiContext(context, state);
    enterRule(_localctx, 12, RULE_buat_fungsi);
    try {
      enterOuterAlt(_localctx, 1);
      state = 91;
      match(TOKEN_IDENTIFIKASI);
      state = 92;
      parameter_buat_fungsi();
      state = 93;
      blok_kode();
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  Parameter_panggil_fungsiContext parameter_panggil_fungsi() {
    dynamic _localctx = Parameter_panggil_fungsiContext(context, state);
    enterRule(_localctx, 14, RULE_parameter_panggil_fungsi);
    int _la;
    try {
      state = 109;
      errorHandler.sync(this);
      switch (interpreter!.adaptivePredict(tokenStream, 11, context)) {
      case 1:
        enterOuterAlt(_localctx, 1);
        state = 95;
        parameter_fungsi_kosong();
        break;
      case 2:
        enterOuterAlt(_localctx, 2);
        state = 96;
        match(TOKEN_KURUNG_BUKA);

        state = 97;
        nilai_variable();
        state = 105;
        errorHandler.sync(this);
        _la = tokenStream.LA(1)!;
        if (_la == TOKEN_KOMA) {
          state = 98;
          match(TOKEN_KOMA);
          state = 102;
          errorHandler.sync(this);
          _la = tokenStream.LA(1)!;
          while ((((_la) & ~0x3f) == 0 && ((1 << _la) & 3968) != 0)) {
            state = 99;
            nilai_variable();
            state = 104;
            errorHandler.sync(this);
            _la = tokenStream.LA(1)!;
          }
        }

        state = 107;
        match(TOKEN_KURUNG_TUTUP);
        break;
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  Panggil_fungsiContext panggil_fungsi() {
    dynamic _localctx = Panggil_fungsiContext(context, state);
    enterRule(_localctx, 16, RULE_panggil_fungsi);
    try {
      enterOuterAlt(_localctx, 1);
      state = 111;
      match(TOKEN_IDENTIFIKASI);
      state = 112;
      parameter_panggil_fungsi();
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  Tipe_data_variableContext tipe_data_variable() {
    dynamic _localctx = Tipe_data_variableContext(context, state);
    enterRule(_localctx, 18, RULE_tipe_data_variable);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 114;
      _la = tokenStream.LA(1)!;
      if (!((((_la) & ~0x3f) == 0 && ((1 << _la) & 124) != 0))) {
      errorHandler.recoverInline(this);
      } else {
        if ( tokenStream.LA(1)! == IntStream.EOF ) matchedEOF = true;
        errorHandler.reportMatch(this);
        consume();
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  Buat_variableContext buat_variable() {
    dynamic _localctx = Buat_variableContext(context, state);
    enterRule(_localctx, 20, RULE_buat_variable);
    try {
      enterOuterAlt(_localctx, 1);
      state = 116;
      tipe_data_variable();
      state = 117;
      match(TOKEN_IDENTIFIKASI);
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  Nilai_variableContext nilai_variable() {
    dynamic _localctx = Nilai_variableContext(context, state);
    enterRule(_localctx, 22, RULE_nilai_variable);
    int _la;
    try {
      enterOuterAlt(_localctx, 1);
      state = 119;
      _la = tokenStream.LA(1)!;
      if (!((((_la) & ~0x3f) == 0 && ((1 << _la) & 3968) != 0))) {
      errorHandler.recoverInline(this);
      } else {
        if ( tokenStream.LA(1)! == IntStream.EOF ) matchedEOF = true;
        errorHandler.reportMatch(this);
        consume();
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  Ngisi_variableContext ngisi_variable() {
    dynamic _localctx = Ngisi_variableContext(context, state);
    enterRule(_localctx, 24, RULE_ngisi_variable);
    try {
      enterOuterAlt(_localctx, 1);
      state = 121;
      match(TOKEN_IDENTIFIKASI);
      state = 122;
      match(TOKEN_SAMA_DENGAN);
      state = 123;
      nilai_variable();
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  Buat_dan_ngisi_variableContext buat_dan_ngisi_variable() {
    dynamic _localctx = Buat_dan_ngisi_variableContext(context, state);
    enterRule(_localctx, 26, RULE_buat_dan_ngisi_variable);
    try {
      state = 145;
      errorHandler.sync(this);
      switch (tokenStream.LA(1)!) {
      case TOKEN_TIPE_DATA_BILANGAN_BULAT:
        enterOuterAlt(_localctx, 1);
        state = 125;
        match(TOKEN_TIPE_DATA_BILANGAN_BULAT);
        state = 126;
        match(TOKEN_IDENTIFIKASI);
        state = 127;
        match(TOKEN_SAMA_DENGAN);
        state = 128;
        match(TOKEN_NILAI_BILANGAN_BULAT);
        break;
      case TOKEN_TIPE_DATA_BILANGAN_DESIMAL:
        enterOuterAlt(_localctx, 2);
        state = 129;
        match(TOKEN_TIPE_DATA_BILANGAN_DESIMAL);
        state = 130;
        match(TOKEN_IDENTIFIKASI);
        state = 131;
        match(TOKEN_SAMA_DENGAN);
        state = 132;
        match(TOKEN_NILAI_BILANGAN_DESIMAL);
        break;
      case TOKEN_TIPE_DATA_KARAKTER:
        enterOuterAlt(_localctx, 3);
        state = 133;
        match(TOKEN_TIPE_DATA_KARAKTER);
        state = 134;
        match(TOKEN_IDENTIFIKASI);
        state = 135;
        match(TOKEN_SAMA_DENGAN);
        state = 136;
        match(TOKEN_NILAI_KARAKTER);
        break;
      case TOKEN_TIPE_DATA_KALIMAT:
        enterOuterAlt(_localctx, 4);
        state = 137;
        match(TOKEN_TIPE_DATA_KALIMAT);
        state = 138;
        match(TOKEN_IDENTIFIKASI);
        state = 139;
        match(TOKEN_SAMA_DENGAN);
        state = 140;
        match(TOKEN_NILAI_KALIMAT);
        break;
      case TOKEN_TIPE_DATA_BOOLEAN:
        enterOuterAlt(_localctx, 5);
        state = 141;
        match(TOKEN_TIPE_DATA_BOOLEAN);
        state = 142;
        match(TOKEN_IDENTIFIKASI);
        state = 143;
        match(TOKEN_SAMA_DENGAN);
        state = 144;
        match(TOKEN_NILAI_BOOLEAN);
        break;
      default:
        throw NoViableAltException(this);
      }
    } on RecognitionException catch (re) {
      _localctx.exception = re;
      errorHandler.reportError(this, re);
      errorHandler.recover(this, re);
    } finally {
      exitRule();
    }
    return _localctx;
  }

  static const List<int> _serializedATN = [
      4,1,39,148,2,0,7,0,2,1,7,1,2,2,7,2,2,3,7,3,2,4,7,4,2,5,7,5,2,6,7,6,
      2,7,7,7,2,8,7,8,2,9,7,9,2,10,7,10,2,11,7,11,2,12,7,12,2,13,7,13,1,
      0,5,0,30,8,0,10,0,12,0,33,9,0,1,0,3,0,36,8,0,1,1,1,1,1,1,1,1,1,1,1,
      1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,1,3,1,55,8,1,1,2,1,2,1,
      2,1,3,1,3,5,3,62,8,3,10,3,12,3,65,9,3,1,3,1,3,1,4,1,4,1,4,1,5,1,5,
      1,5,1,5,3,5,76,8,5,1,5,1,5,1,5,5,5,81,8,5,10,5,12,5,84,9,5,3,5,86,
      8,5,1,5,1,5,3,5,90,8,5,1,6,1,6,1,6,1,6,1,7,1,7,1,7,1,7,1,7,5,7,101,
      8,7,10,7,12,7,104,9,7,3,7,106,8,7,1,7,1,7,3,7,110,8,7,1,8,1,8,1,8,
      1,9,1,9,1,10,1,10,1,10,1,11,1,11,1,12,1,12,1,12,1,12,1,13,1,13,1,13,
      1,13,1,13,1,13,1,13,1,13,1,13,1,13,1,13,1,13,1,13,1,13,1,13,1,13,1,
      13,1,13,1,13,1,13,3,13,146,8,13,1,13,0,0,14,0,2,4,6,8,10,12,14,16,
      18,20,22,24,26,0,2,1,0,2,6,1,0,7,11,154,0,35,1,0,0,0,2,54,1,0,0,0,
      4,56,1,0,0,0,6,59,1,0,0,0,8,68,1,0,0,0,10,89,1,0,0,0,12,91,1,0,0,0,
      14,109,1,0,0,0,16,111,1,0,0,0,18,114,1,0,0,0,20,116,1,0,0,0,22,119,
      1,0,0,0,24,121,1,0,0,0,26,145,1,0,0,0,28,30,3,2,1,0,29,28,1,0,0,0,
      30,33,1,0,0,0,31,29,1,0,0,0,31,32,1,0,0,0,32,36,1,0,0,0,33,31,1,0,
      0,0,34,36,5,0,0,1,35,31,1,0,0,0,35,34,1,0,0,0,36,1,1,0,0,0,37,55,3,
      6,3,0,38,55,3,12,6,0,39,40,3,4,2,0,40,41,5,21,0,0,41,55,1,0,0,0,42,
      43,3,16,8,0,43,44,5,21,0,0,44,55,1,0,0,0,45,46,3,20,10,0,46,47,5,21,
      0,0,47,55,1,0,0,0,48,49,3,24,12,0,49,50,5,21,0,0,50,55,1,0,0,0,51,
      52,3,26,13,0,52,53,5,21,0,0,53,55,1,0,0,0,54,37,1,0,0,0,54,38,1,0,
      0,0,54,39,1,0,0,0,54,42,1,0,0,0,54,45,1,0,0,0,54,48,1,0,0,0,54,51,
      1,0,0,0,55,3,1,0,0,0,56,57,5,1,0,0,57,58,5,10,0,0,58,5,1,0,0,0,59,
      63,5,24,0,0,60,62,3,2,1,0,61,60,1,0,0,0,62,65,1,0,0,0,63,61,1,0,0,
      0,63,64,1,0,0,0,64,66,1,0,0,0,65,63,1,0,0,0,66,67,5,25,0,0,67,7,1,
      0,0,0,68,69,5,22,0,0,69,70,5,23,0,0,70,9,1,0,0,0,71,90,3,8,4,0,72,
      75,5,22,0,0,73,76,3,20,10,0,74,76,3,26,13,0,75,73,1,0,0,0,75,74,1,
      0,0,0,76,85,1,0,0,0,77,82,5,34,0,0,78,81,3,20,10,0,79,81,3,26,13,0,
      80,78,1,0,0,0,80,79,1,0,0,0,81,84,1,0,0,0,82,80,1,0,0,0,82,83,1,0,
      0,0,83,86,1,0,0,0,84,82,1,0,0,0,85,77,1,0,0,0,85,86,1,0,0,0,86,87,
      1,0,0,0,87,88,5,23,0,0,88,90,1,0,0,0,89,71,1,0,0,0,89,72,1,0,0,0,90,
      11,1,0,0,0,91,92,5,19,0,0,92,93,3,10,5,0,93,94,3,6,3,0,94,13,1,0,0,
      0,95,110,3,8,4,0,96,97,5,22,0,0,97,105,3,22,11,0,98,102,5,34,0,0,99,
      101,3,22,11,0,100,99,1,0,0,0,101,104,1,0,0,0,102,100,1,0,0,0,102,103,
      1,0,0,0,103,106,1,0,0,0,104,102,1,0,0,0,105,98,1,0,0,0,105,106,1,0,
      0,0,106,107,1,0,0,0,107,108,5,23,0,0,108,110,1,0,0,0,109,95,1,0,0,
      0,109,96,1,0,0,0,110,15,1,0,0,0,111,112,5,19,0,0,112,113,3,14,7,0,
      113,17,1,0,0,0,114,115,7,0,0,0,115,19,1,0,0,0,116,117,3,18,9,0,117,
      118,5,19,0,0,118,21,1,0,0,0,119,120,7,1,0,0,120,23,1,0,0,0,121,122,
      5,19,0,0,122,123,5,20,0,0,123,124,3,22,11,0,124,25,1,0,0,0,125,126,
      5,2,0,0,126,127,5,19,0,0,127,128,5,20,0,0,128,146,5,7,0,0,129,130,
      5,3,0,0,130,131,5,19,0,0,131,132,5,20,0,0,132,146,5,8,0,0,133,134,
      5,4,0,0,134,135,5,19,0,0,135,136,5,20,0,0,136,146,5,9,0,0,137,138,
      5,5,0,0,138,139,5,19,0,0,139,140,5,20,0,0,140,146,5,10,0,0,141,142,
      5,6,0,0,142,143,5,19,0,0,143,144,5,20,0,0,144,146,5,11,0,0,145,125,
      1,0,0,0,145,129,1,0,0,0,145,133,1,0,0,0,145,137,1,0,0,0,145,141,1,
      0,0,0,146,27,1,0,0,0,13,31,35,54,63,75,80,82,85,89,102,105,109,145
  ];

  static final ATN _ATN =
      ATNDeserializer().deserialize(_serializedATN);
}
class NusantaraContext extends ParserRuleContext {
  List<PernyataanContext> pernyataans() => getRuleContexts<PernyataanContext>();
  PernyataanContext? pernyataan(int i) => getRuleContext<PernyataanContext>(i);
  TerminalNode? EOF() => getToken(NusantaraLanguageParser.TOKEN_EOF, 0);
  NusantaraContext([ParserRuleContext? parent, int? invokingState]) : super(parent, invokingState);
  @override
  int get ruleIndex => RULE_nusantara;
  @override
  void enterRule(ParseTreeListener listener) {
    if (listener is NusantaraLanguageParserListener) listener.enterNusantara(this);
  }
  @override
  void exitRule(ParseTreeListener listener) {
    if (listener is NusantaraLanguageParserListener) listener.exitNusantara(this);
  }
  @override
  T? accept<T>(ParseTreeVisitor<T> visitor) {
    if (visitor is NusantaraLanguageParserVisitor<T>) {
     return visitor.visitNusantara(this);
    } else {
    	return visitor.visitChildren(this);
    }
  }
}

class PernyataanContext extends ParserRuleContext {
  Blok_kodeContext? blok_kode() => getRuleContext<Blok_kodeContext>(0);
  Buat_fungsiContext? buat_fungsi() => getRuleContext<Buat_fungsiContext>(0);
  Muat_fileContext? muat_file() => getRuleContext<Muat_fileContext>(0);
  TerminalNode? TITIK_KOMA() => getToken(NusantaraLanguageParser.TOKEN_TITIK_KOMA, 0);
  Panggil_fungsiContext? panggil_fungsi() => getRuleContext<Panggil_fungsiContext>(0);
  Buat_variableContext? buat_variable() => getRuleContext<Buat_variableContext>(0);
  Ngisi_variableContext? ngisi_variable() => getRuleContext<Ngisi_variableContext>(0);
  Buat_dan_ngisi_variableContext? buat_dan_ngisi_variable() => getRuleContext<Buat_dan_ngisi_variableContext>(0);
  PernyataanContext([ParserRuleContext? parent, int? invokingState]) : super(parent, invokingState);
  @override
  int get ruleIndex => RULE_pernyataan;
  @override
  void enterRule(ParseTreeListener listener) {
    if (listener is NusantaraLanguageParserListener) listener.enterPernyataan(this);
  }
  @override
  void exitRule(ParseTreeListener listener) {
    if (listener is NusantaraLanguageParserListener) listener.exitPernyataan(this);
  }
  @override
  T? accept<T>(ParseTreeVisitor<T> visitor) {
    if (visitor is NusantaraLanguageParserVisitor<T>) {
     return visitor.visitPernyataan(this);
    } else {
    	return visitor.visitChildren(this);
    }
  }
}

class Muat_fileContext extends ParserRuleContext {
  TerminalNode? MUAT() => getToken(NusantaraLanguageParser.TOKEN_MUAT, 0);
  TerminalNode? NILAI_KALIMAT() => getToken(NusantaraLanguageParser.TOKEN_NILAI_KALIMAT, 0);
  Muat_fileContext([ParserRuleContext? parent, int? invokingState]) : super(parent, invokingState);
  @override
  int get ruleIndex => RULE_muat_file;
  @override
  void enterRule(ParseTreeListener listener) {
    if (listener is NusantaraLanguageParserListener) listener.enterMuat_file(this);
  }
  @override
  void exitRule(ParseTreeListener listener) {
    if (listener is NusantaraLanguageParserListener) listener.exitMuat_file(this);
  }
  @override
  T? accept<T>(ParseTreeVisitor<T> visitor) {
    if (visitor is NusantaraLanguageParserVisitor<T>) {
     return visitor.visitMuat_file(this);
    } else {
    	return visitor.visitChildren(this);
    }
  }
}
